Fixed Rarity symbol hiding behind pokemon

--- a/styles/dexnav.less
+++ b/styles/dexnav.less
@@ -135,7 +135,7 @@
                     height:100%;
                     transition: filter 1s ease-in-out;
                     position: relative;
-                    z-index: 2;
+                    // z-index: 2;
                 }
                 
                 &.surfing, &.fishing {
